--- a/ament_cmake_black/package.xml
+++ b/ament_cmake_black/package.xml
@@ -6,7 +6,8 @@
   <description>
     The CMake API for ament_black to lint Python code using black.
   </description>
-  <maintainer email="tylerjw@gmail.com">Tyler Weaver</maintainer>
+  <maintainer email="tim.clephas@nobleo.nl">Tim Clephas</maintainer>
+  <author email="tylerjw@gmail.com">Tyler Weaver</author>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake_core</buildtool_depend>
