--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -44,7 +44,7 @@ jobs:
   pypi:
     # Publish to pypi only on tag events. To be replaced by "release" if more people use it
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
-    needs: [cibuildwheel, build_sdist]
+    needs: [build_wheel, build_sdist]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
