--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -45,6 +45,7 @@ jobs:
           path: ./wheelhouse/*.whl
 
   pypi:
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     needs: [build_wheel, build_sdist]
     runs-on: ubuntu-latest
     steps:
