--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -4,9 +4,6 @@ on:
     branches:
       - main
       - master
-    # Publish to pypi only on tag events. To be replaced by "release" if more people use it
-    tags:
-      - v*
   pull_request:
   workflow_dispatch:
 
@@ -45,7 +42,7 @@ jobs:
           path: ./wheelhouse/*.whl
 
   pypi:
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    if: github.event_name == 'release'
     needs: [build_wheel, build_sdist]
     runs-on: ubuntu-latest
     steps:
