--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_sdist:
+  build:
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
@@ -23,30 +23,17 @@ jobs:
       - name: Build sdist
         run: |
           pipx run build --sdist ${{github.workspace}}/ament_black/
-          mkdir -p dist && mv ${{github.workspace}}/ament_black/dist/*.tar.gz dist/
+          pipx run build --wheel ${{github.workspace}}/ament_black/
       - uses: actions/upload-artifact@v3
         with:
-          path: dist/*.tar.gz
-
-  build_wheel:
-    name: Build wheels on ${{ matrix.os }}
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python3
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.10"
-      - name: Build wheel
-        run: pipx run build --wheel ${{github.workspace}}/ament_black/
-      - uses: actions/upload-artifact@v3
-        with:
-          path: ./wheelhouse/*.whl
+          name: Release artifacts
+          path: |
+            dist/*.tar.gz
+            dist/*.whl
 
   pypi:
     if: github.event_name == 'release'
-    needs: [build_wheel, build_sdist]
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
